# godot-gdextension-demo-cmake

./: .gitignore  CMakeLists.txt  README.md
example/: project.godot
scripts/: build-engine.sh
src/: gdexample.cpp  gdexample.h  register_types.cpp
